zeit.content.cp changes
=======================

0.43.4 (unreleased)
-------------------

- Accomodated article to cope for the changed videos: videos are now full CMS
  objects and moved to zeit.content.video (for #8996)


0.43.3 (2011-06-23)
-------------------

- Compatibility fix for Firefox 5 (#9236).


0.43.2 (2011-06-22)
-------------------

- Compatibility fix for Firefox 5 (#9227).


0.43.1 (2011-03-24)
-------------------

- Bugfix: Raw-Modul im Aufmacher bekommt kein Layout mehr zugewiesen, das kann
  nämlich nicht funktionieren (#8844).

- is_published für Validation-Rules ignoriert NotPublishablePublishInfos
  (#8843).


0.43.0 (2011-03-23)
-------------------

- TeaserBockProxy adapts to ICommonMetadata now.

- Freie Teaser werden jetzt nur noch in der CP gespeichert. Es gibt keine extra
  Objekte im DAV mehr dafür (#7826)

- Das Raw-Modul kann jetzt auch im Aufmacher verwendet werden (#8781)

- Layout-Berechnung im Aufmacher korrigiert (#8844).


0.42.0 (2010-08-16)
-------------------

- Reichweite im CPE anzeigen (#7560).

- Für Teaserbilder wird als Fallback jetzt @@preview  verwendet (#7798).


0.41.0 (2010-08-09)
-------------------

- ``cms_content_iter`` funktioniert jetzt auch, wenn eine CP ein Modul enthält,
  welches das CMS nicht kennt (#7727).
- Für Selenium-Tests wird nun ``gocept.selenium`` verwendet (#7549).
- Auch gesperrte, oder anderweitig nicht auscheckbare Objekte, haben beim
  Bearbeiten einer Teaser-Liste jetzt das Icon "in neuem Fenster öffnen"
  (#7825).



0.40.0 (2010-07-07)
-------------------

- Warnung bei Änderungen, wenn ein freier Teaser zu einem Artikel existiert
  (#6415).


0.39.0 (2010-07-07)
-------------------

- Fehler bei Regeln ("cp_type is undefined") verhindern (#7444).
- Stabilieres Quick-Publish (#7433).
- Aktualisieren des RSS-Feeds in der CP führt nicht mehr zu ConflictError
  (#7587)


0.38.0 (2010-06-09)
-------------------

- Prevent error during refresh when feed cannot be checked out (#7313).