@@ -7,6 +7,9 @@ zeit.content.cp changes
 - Accomodated article to cope for the changed videos: videos are now full CMS
   objects and moved to zeit.content.video (for #8996)
 
+- Skip two flaky tests until we have the Selenium 2 API available.
+  (#10340, #10364)
+
 
 0.43.3 (2011-06-23)
 -------------------
